static/css/style.css
/* ... */
.container--inbox {
    top: 220px;
    margin-bottom: 190px;
}

.inbox__subject {
    color: var(--color6);
    font-weight: 900;
}

.inbox__subject--read {
    font-weight: 100;
}

.inbox__details {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -ms-flex-pack: justify;
    justify-content: space-between;
    font-weight: 100;
    font-size: 0.9rem;
    padding: 5px 0;
}

.inbox-title {
    color: var(--color0);
    font-size: 1.1rem;
    font-weight: 900;
    text-align: left;
    white-space: pre-line;
    margin: 10px 0;
    padding: 0 10px;
}

.inbox--requests {
    display: none;
}

#title-requests {
    display: none;
}

.switch {
    margin-top: 20px;
    font-size: 2rem;
    text-align: center;
}

.switch__requests,
.switch__messages {
    cursor: pointer;
    -webkit-transition: 0.3s;
    -o-transition: 0.3s;
    transition: 0.3s;
}

.switch__requests:focus-visible,
.switch__messages:focus-visible {
    outline: none;
}

.switch__requests {
    color: rgba(0, 0, 0, 0.3);
}

/* message.html */

.message__subject {
    font-size: 1.1rem;
    font-weight: 900;
    margin: 35px 0;
    padding: 0 10px;
}

.message__details {
    font-weight: 100;
    margin-bottom: 35px;
    padding: 0 10px;
}

.message__details span {
    font-weight: 900;
}

.message__nonuser {
    text-align: justify;
    padding: 0 10px;
}

.message__content {
    padding: 0 10px;
    font-size: 1.1rem;
    font-weight: 100;
    text-align: justify;
    white-space: pre-line;
}

.message__content--adopt {
    padding: 0;
}

.message__replied {
    color: var(--color2);
    font-size: 1rem;
    font-weight: 100;
}

.textarea--reply {
    margin-top: 35px;
}

.message__btns {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
}

.message__btns * {
    cursor: pointer;
}

.message__btns div {
    font-size: 0.9rem;
    font-weight: 400;
    text-align: center;
    border: 1px solid var(--color2);
    border-radius: 5px;
    background-color: var(--color6);
    color: var(--color3);
    width: 90px;
    padding: 10px;
    margin: 35px 10px;
}

.message__btns i {
    margin-right: 5px;
}

.btn--reply {
    margin: 35px auto 15px auto;
}

.dog-unavailable {
    color: red;
    margin: 15px 0;
}

/* Navbar and Footer */

.nav {
    position: fixed;
    width: 100%;
    background-color: var(--color1);
    height: 80px;
    z-index: 2;
    -webkit-transition: 0.5s;
    -o-transition: 0.5s;
    transition: 0.5s;
}

.navbar {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    padding: 0 10px;
    height: 100%;
    border-bottom: 1px solid var(--color6);
}

.navbar__logo {
    color: var(--color6);
    font-size: 2rem;
    -webkit-transition: 0.3s;
    -o-transition: 0.3s;
    transition: 0.3s;
}

.navbar__toggle {
    color: var(--color6);
    font-size: 2rem;
}

.nav__mobile {
    display: none;
    height: 100vh;
    padding: 10px 25px;
    background-color: var(--color1);
    z-index: 1;
}

.nav__mobile li {
    margin: 20px 0;
    padding: 5px 15px;
    font-size: 1.5rem;
    -webkit-box-shadow: inset 4px 0px 0px -2px rgba(255, 255, 255, 0.4);
    box-shadow: inset 4px 0px 0px -2px rgba(255, 255, 255, 0.4);
}

.nav__mobile a {
    color: var(--color6);
}

.footer {
    text-align: center;
    background-color:var(--color1);
    color: var(--color6);
    padding: 25px 0;
}

.footer__title {
    font-size: 1.5rem;
}

.footer__links {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
}

.footer i {
    font-size: 2rem;
    margin: 25px 10px;
}

.footer a {
    color: rgba(255, 255, 255, 0.5);
    -webkit-transition: 0.3s;
    -o-transition: 0.3s;
    transition: 0.3s;
}

.footer__copyright {
    font-size: 0.8rem;
}
/* ... */

